# trp1-mcp-setup-challenge

./: CLAUDE.md  README.md  SUBMISSION.md
.github/: copilot-instructions.md
docs/: insights-and-learnings.md  rules-research.md  setup-process.md
environment/project-chimera/: .coderabbit.yaml  .env.example  .gitignore  Dockerfile  Makefile  pyproject.toml
environment/project-chimera/.cursor/: rules
environment/project-chimera/.github/workflows/: main.yml
environment/project-chimera/research/: tooling_strategy.md
environment/project-chimera/skills/: README.md
environment/project-chimera/specs/: _meta.md  functional.md  technical.md
environment/project-chimera/src/chimera/: main.py
environment/project-chimera/src/chimera/agents/: README.md  __init__.py  judge.py  planner.py  worker.py
environment/project-chimera/src/chimera/api/: README.md  __init__.py  judge.py  planner.py  worker.py
environment/project-chimera/src/chimera/mcp/: README.md  __init__.py  mcp_client.py  mcp_exceptions.py
environment/project-chimera/src/chimera/orchestration/: README.md  langgraph_state.py
environment/project-chimera/src/chimera/persistence/: README.md  __init__.py  persistence.py
environment/project-chimera/tests/: README.md  __init__.py
environment/project-chimera/tests/agents/: __init__.py  test_judge.py  test_planner.py  test_worker.py
environment/project-chimera/tests/api/: __init__.py  test_api_judge.py  test_api_planner.py  test_api_worker.py
environment/project-chimera/tests/governor/: __init__.py  test_skills_interface.py  test_trend_fetcher.py
environment/project-chimera/tests/mcp/: __init__.py  test_mcp_client.py  test_mcp_exceptions.py
environment/project-chimera/tests/orchestration/: __init__.py  test_langgraph_state.py
